[tool.poetry]
name = "advrag"
version = "1.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
langchain = "^0.3.4"
langgraph = "^0.2.39"
langchain-openai = "^0.2.4"
langchainhub = "^0.1.21"
black = "^24.10.0"
isort = "^5.13.2"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.3"
tavily-python = "^0.5.0"
langchain-chroma = "^0.1.4"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
